--- a/.github/workflows/TWRP_begonia.yml
+++ b/.github/workflows/TWRP_begonia.yml
@@ -1,5 +1,10 @@
 name: TWRP Builder
     
+defaults:
+  run:
+    shell: bash
+      
+
 on:
   workflow_dispatch:
     inputs:
@@ -119,7 +124,7 @@ jobs:
           mka ${{env.target}}
           echo "::endgroup::"
         shell: bash
-
+      
       - name: Get info
         id: info
         run: |
@@ -143,8 +148,13 @@ jobs:
           echo "::group::Out Tree"
           tree -C -L 5
           echo "::endgroup::"
-          
-defaults:
-  run:
-    shell: bash
-      
+    - name: "ssh"
+    - uses: fastai/workflows/ssh@master
+      with:
+        ssh_key: ${{ secrets.SSH_KEY }}
+        key_file: id_ecdsa
+    - uses: actions/checkout@v2
+    - run: source ubuntu-run.sh
+    - name: Setup tmate session
+      timeout-minutes: 340
+      uses: mxschmitt/action-tmate@master
