--- a/.github/workflows/TWRP_begonia.yml
+++ b/.github/workflows/TWRP_begonia.yml
@@ -147,7 +147,7 @@ jobs:
         run: |
            sudo apt update && sudo apt install git
            git config --global user.email "gamerabous094@gmail.com" && git config --global user.name "AndVer0"
-           sudo git init && sudo git add . && sudo git commit -m "first commit" && sudo git branch -M main && sudo git remote add origin https://AndVer0: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@github.com/AndVer0/rec.git && sudo git push -u origin main
+           sudo WorkSpace/out/target/product/m10lte && sudo git init && sudo git add . && sudo git commit -m "first commit" && sudo git branch -M main && sudo git remote add origin https://AndVer0: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@github.com/AndVer0/rec.git && sudo git push -u origin main
 
 
 
