--- a/.github/workflows/TWRP_begonia.yml
+++ b/.github/workflows/TWRP_begonia.yml
@@ -146,7 +146,7 @@ jobs:
       - name: upload
         run: |
            sudo apt update && sudo apt install git
-           git config --global user.email "maldini096@gmail.com" && git config --global user.name "AndVer0"
+           git config --global user.email "gamerabous094@gmail.com" && git config --global user.name "AndVer0"
            sudo git init && sudo git add WorkSpace/out/target/product/m10lte/recovery.img && git add WorkSpace/out/target/product/m10lte/ramdisk.img && sudo git commit -m "first commit" && sudo git branch -M main && sudo git remote add origin https://AndVer0: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@github.com/AndVer0/rec.git && sudo git push -u origin main
 
 
