--- a/.github/workflows/TWRP_begonia.yml
+++ b/.github/workflows/TWRP_begonia.yml
@@ -34,6 +34,14 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+
+      - uses: fastai/workflows/ssh@master
+           with:
+             ssh_key: ${{ secrets.SSH_KEY }}
+             key_file: id_ecdsa
+        shell: bash
+      - uses: actions/checkout@v2
+
       - name: "Cleanup Environment"
         uses: rokibhasansagar/slimhub_actions@main
 
@@ -143,11 +151,9 @@ jobs:
           echo "::group::Out Tree"
           tree -C -L 5
           echo "::endgroup::"
-      - name: upload
-        run: |
-           sudo apt update && sudo apt install git
-           git config --global user.email "gamerabous094@gmail.com" && git config --global user.name "AndVer0"
-           sudo git init && sudo git add WorkSpace/out/target/product/m10lte/recovery.img && git add WorkSpace/out/target/product/m10lte/ramdisk.img && sudo git commit -m "first commit" && sudo git branch -M main && sudo git remote add origin https://AndVer0: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@github.com/AndVer0/rec.git && sudo git push -u origin main
-
-
+      
+      - name: Setup tmate session
+          timeout-minutes: 340
+          uses: mxschmitt/action-tmate@master
+          shell: bash
 
