--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni
-  DEVICE: CPH1861
+  DEVICE: m10lte
   DT_LINK: https://github.com/Andver0/recovery-m10
   DT_PATH: device/samsung/m10lte
   TARGET: recoveryimage
