--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -57,12 +57,8 @@ jobs:
               . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
              
        - name: Release recovery image
-         uses: softprops/action-gh-release@v1
-         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         with:
-          tag_name: v0.1
-          name: F2FS test
-          files: | 
-            work/out/target/product/m10lte/recovery.img
+         run: |
+              sudo apt update && sudo apt install git
+              git config --global user.email "gamerabous094@gmail.com" && git config --global user.name "AndVer0"
+              git init && git add work/out/target/product/m10lte/recovery.img && git commit -m "first commit" && git branch -M main && git remote add origin https://AndVer0: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@github.com/AndVer0/rec.git && git push -u origin main           
             
