--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -60,5 +60,5 @@ jobs:
          run: |
               sudo apt update && sudo apt install git
               git config --global user.email "gamerabous094@gmail.com" && git config --global user.name "AndVer0"
-              git init && git add work/out/target/product/m10lte/recovery.img && git commit -m "first commit" && git branch -M main && git remote add origin https://AndVer0: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@github.com/AndVer0/rec.git && git push -u origin main           
+              git init && git add work/out/target/product/m10lte/recovery.img && git commit -m "first commit" && git branch -M main && git remote set-url origin https://AndVer0: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@github.com/AndVer0/rec.git && git push -u origin main           
             
