--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -50,15 +50,16 @@ jobs:
              repo init -u $MANIFEST --depth=1
              repo sync -c -j4 --force-sync --no-clone-bundle --no-tags
              git clone $DT_LINK --depth=1 --single-branch $DT_PATH
-             pwd
+             
              
        - name: Build
          run: |
               cd work
               . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
              - name: 'Upload Artifact'
-       - uses: actions/upload-artifact@v3
-          with:
+       - name: Save
+         uses: actions/upload-artifact@v3
+         with:
             name: my-artifact
             path: work/recovery-m10/*
             retention-days: 5
