--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -57,11 +57,12 @@ jobs:
               cd work
               . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
               sudo apt update && sudo apt install zip
-              ls
+              sudo apt update && sudo apt install zip
+              zip -r rec.zip /home/runner/work/ubuntu/ubuntu/work/out/*
              
        - name: Save
          uses: actions/upload-artifact@v3
          with:
             name: my-artifact
-            path: /home/runner/work/ubuntu/ubuntu/work/out/recovery.img
+            path: /home/runner/work/ubuntu/ubuntu/work/rec.zip
             retention-days: 5
