--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -58,7 +58,7 @@ jobs:
               . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
               sudo apt update && sudo apt install zip
               sudo apt update && sudo apt install zip
-              zip -r rec.zip /home/runner/work/ubuntu/ubuntu/work/out/*
+              zip -r rec.zip /home/runner/work/ubuntu/ubuntu/work/out/*.img
              
        - name: Save
          uses: actions/upload-artifact@v3
