--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-10.0
+  MANIFEST: https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-10.0 -b android-10.0
   DEVICE: m10lte
   DT_LINK: https://github.com/Andver0/recovery-m10
   DT_PATH: device/samsung/m10lte
