Update and adapt for Recovery-Builder

--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,12 +13,12 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-10.0 -b android-10.0
-  DEVICE: m10lte
-  DT_LINK: https://github.com/Andver0/recovery-m10
-  DT_PATH: device/samsung/m10lte
+  MANIFEST: git@github.com:minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-12.1
+  DEVICE: r9q
+  DT_LINK: https://github.com/klabit87/android_device_samsung_r9q
+  DT_PATH: device/samsung/r9q
   TARGET: recoveryimage
-  TZ: Europe/London
+  OUTPUT: recovery.img
 
 jobs:
   build:
@@ -34,8 +34,8 @@ jobs:
             sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
             docker rmi `docker images -q`
             sudo apt-get remove account-plugin-facebook account-plugin-flickr account-plugin-jabber account-plugin-salut account-plugin-twitter account-plugin-windows-live account-plugin-yahoo aisleriot brltty duplicity empathy empathy-common example-content gnome-accessibility-themes gnome-contacts gnome-mahjongg gnome-mines gnome-orca gnome-screensaver gnome-sudoku gnome-video-effects gnomine landscape-common libreoffice-avmedia-backend-gstreamer libreoffice-base-core libreoffice-calc libreoffice-common libreoffice-core libreoffice-draw libreoffice-gnome libreoffice-gtk libreoffice-impress libreoffice-math libreoffice-ogltrans libreoffice-pdfimport libreoffice-style-galaxy libreoffice-style-human libreoffice-writer libsane libsane-common mcp-account-manager-uoa python3-uno rhythmbox rhythmbox-plugins rhythmbox-plugin-zeitgeist sane-utils shotwell shotwell-common telepathy-gabble telepathy-haze telepathy-idle telepathy-indicator telepathy-logger telepathy-mission-control-5 telepathy-salut totem totem-common totem-plugins printer-driver-brlaser printer-driver-foo2zjs printer-driver-foo2zjs-common printer-driver-m2300w printer-driver-ptouch printer-driver-splix
-            git config --global user.name "Ayush"
-            git config --global user.email "ayush@disroot.org"         
+            git config --global user.name ""
+            git config --global user.email ""         
             sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php* 
             sudo -E apt-get clean
             sudo -E apt-get -qq update
@@ -43,6 +43,12 @@ jobs:
             sudo curl --create-dirs -L -o /usr/local/bin/repo -O -L https://storage.googleapis.com/git-repo-downloads/repo
             sudo chmod a+rx /usr/local/bin/repo
             
+       - uses: webfactory/ssh-agent@v0.5.4
+         with:
+              ssh-private-key: |
+                    ${{ secrets.SSH_PRIVATE_KEY }}
+            
+
        - name: Sync recovery source and device tree
          run: |
              mkdir work
@@ -55,14 +61,14 @@ jobs:
        - name: Build
          run: |
               cd work
-              . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
+              . build/envsetup.sh &&lunch twrp_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
               sudo apt update && sudo apt install zip
               sudo apt update && sudo apt install zip
-              zip -r rec.zip /home/runner/work/ubuntu/ubuntu/work/out/target/product/m10lte/recovery.img
+              zip -r rec.zip /home/runner/work/Recovery-Builder/Recovery-Builder/work/out/target/product/$DEVICE/$OUTPUT
              
        - name: Save
          uses: actions/upload-artifact@v3
          with:
             name: my-artifact
-            path: /home/runner/work/ubuntu/ubuntu/work/rec.zip
+            path: /home/runner/work/Recovery-Builder/Recovery-Builder/work/rec.zip
             retention-days: 5
