--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,9 +13,9 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: git@github.com:minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-12.1
+  MANIFEST: git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-11
   DEVICE: A9_Pro_128GB
-  DT_LINK: https://github.com/ZEROSHITSGIVEN/Umidigi_A9_Pro_2021_6GB-128GB_Device_Tree
+  DT_LINK: Umidigi_A9_Pro_2021_6GB-128GB_Device_Tree
   DT_PATH: device/hxy/A9_Pro_128GB
   TARGET: Image.gz
   OUTPUT: TWRP_Image.gz
