--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: git@github.com/PitchBlackRecoveryProject/manifest_pb -b android-11.0
+  MANIFEST: git@github.com:PitchBlackRecoveryProject/manifest_pb.git -b android-11.0
   DEVICE: A9_Pro_128GB
   DT_LINK: Umidigi_A9_Pro_2021_6GB-128GB_Device_Tree
   DT_PATH: device/hxy/A9_Pro_128GB
